--- a/HW2/Task3/style.css
+++ b/HW2/Task3/style.css
@@ -10,36 +10,33 @@
         padding: 30px 10px;
 }
 
-.traffic_light span {
+.lamp {
         width: 75px;
         height: 75px;
         border-radius: 100%;
         background-color: gray;
-        
 }
 
-   .red {
-        animation-name: red;
-      }
-   .yellow {
-        animation-name: yellow;
-      }
-   .green {
-        animation-name: green;
-      }
 
-.button {
+
+.button_panel {
+  float: left;
+  width: 130px;
+  margin: 30px 0px; 
+}
+
+button {
   background-color: rgb(102, 255, 255);
   color: black;
   width: 120px;
   height: 30px;
-  margin: 30px 0px; 
+  margin: 10px 0px;
   cursor: pointer;
   border-radius: 10px;
   border: 3px;
   
 }
 
-.button:hover {
+button:hover {
   background-color: rgb(110, 55, 255);
 }
